--- a/Books Sheet/36-potent food.html
+++ b/Books Sheet/36-potent food.html
@@ -69,6 +69,9 @@ Fat Burning Basics<br>
             <a href="36-potent-foods.doc" download >Download Hard Copy  - ₦2,000 </a>
     </div>
     <style>
+        body{
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
         .book-container {
             width: 80%;
             margin: 40px auto;
