--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                   <div class="banner-content">
                     <h2>Aging Secret Collection</h2>
                     <p>Best Offer Save 30%. Grab it now!</p>
-                    <a href="Books Sheet/aging secret.html" class="btn mt-3">Download Book</a>
+                    <a href="payment Factory/access.html" class="btn mt-3">Download Book</a>
                   </div>
                 </div>
                 <div class="col-md-6 text-center">
@@ -1541,7 +1541,7 @@
         <div class="row">
           <div class="col-md-2">
             <figure class="instagram-item position-relative rounded-3">
-              <a href="https://templatesjungle.com/" class="image-link position-relative">
+              <a href="index.html" class="image-link position-relative">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
                     <use xlink:href="#instagram"></use>
@@ -1553,7 +1553,7 @@
           </div>
           <div class="col-md-2">
             <figure class="instagram-item position-relative rounded-3">
-              <a href="https://templatesjungle.com/" class="image-link position-relative">
+              <a href="index.html" class="image-link position-relative">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
                     <use xlink:href="#instagram"></use>
@@ -1565,7 +1565,7 @@
           </div>
           <div class="col-md-2">
             <figure class="instagram-item position-relative rounded-3">
-              <a href="https://templatesjungle.com/" class="image-link position-relative">
+              <a href="index.html" class="image-link position-relative">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
                     <use xlink:href="#instagram"></use>
@@ -1577,7 +1577,7 @@
           </div>
           <div class="col-md-2">
             <figure class="instagram-item position-relative rounded-3">
-              <a href="https://templatesjungle.com/" class="image-link position-relative">
+              <a href="index.html" class="image-link position-relative">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
                     <use xlink:href="#instagram"></use>
@@ -1589,7 +1589,7 @@
           </div>
           <div class="col-md-2">
             <figure class="instagram-item position-relative rounded-3">
-              <a href="https://templatesjungle.com/" class="image-link position-relative">
+              <a href="index.html" class="image-link position-relative">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
                     <use xlink:href="#instagram"></use>
@@ -1601,7 +1601,7 @@
           </div>
           <div class="col-md-2">
             <figure class="instagram-item position-relative rounded-3">
-              <a href="https://templatesjungle.com/" class="image-link position-relative">
+              <a href="index.html" class="image-link position-relative">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
                     <use xlink:href="#instagram"></use>
