--- a/payment Factory/payment.html
+++ b/payment Factory/payment.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment Confirmation</title>
-
-    <!-- Modern Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
     <style>
         * {
             margin: 0;
@@ -22,104 +17,84 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #e8f0ff, #ffffff);
-            padding: 20px;
+            background: #f0f4f8;
         }
 
         .container {
-            background: #ffffff;
-            padding: 35px 30px;
-            border-radius: 15px;
-            width: 100%;
-            max-width: 420px;
+            position: relative;
+            background: white;
+            padding: 35px 10px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            width: 370px;
             text-align: center;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-            animation: fadeIn 0.7s ease-in-out;
+            opacity: 0; /* start hidden for fade-in */
+            transform: translateY(20px); /* slight upward motion */
+            animation: fadeIn 0.7s forwards ease-in-out;
         }
 
         @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
             to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
 
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 24px;
+            font-weight: bold;
+            color: #e63946;
+            cursor: pointer;
+        }
+
         h2 {
             color: #0077b6;
-            font-size: 22px;
-            margin-bottom: 25px;
-            font-weight: 600;
+            margin-bottom: 20px;
         }
 
         .form-group {
-            margin-bottom: 18px;
+            margin-bottom: 15px;
             text-align: left;
         }
 
         label {
-            font-weight: 600;
-            margin-bottom: 6px;
             display: block;
+            font-weight: 600;
+            margin-bottom: 5px;
             color: #333;
         }
 
         input {
             width: 100%;
-            padding: 12px;
-            border: 1px solid #cbd5e1;
-            border-radius: 8px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
             font-size: 15px;
-            background: #f8fafc;
-            transition: 0.2s ease;
         }
 
         input:focus {
             border-color: #0077b6;
-            background: #ffffff;
-            box-shadow: 0 0 5px rgba(0, 119, 182, 0.3);
+            outline: none;
         }
 
         button {
             width: 100%;
-            padding: 14px;
+            padding: 12px;
             background: #0077b6;
             border: none;
-            border-radius: 8px;
-            font-size: 16px;
-            font-weight: 600;
             color: white;
+            font-size: 16px;
+            border-radius: 6px;
             cursor: pointer;
-            transition: 0.3s ease;
-            margin-top: 15px;
-            box-shadow: 0 4px 12px rgba(0, 119, 182, 0.3);
+            transition: background 0.3s;
+            margin-top: 10px;
         }
 
         button:hover {
-            background: #005e94;
-            transform: translateY(-2px);
-        }
-
-        button:active {
-            transform: scale(0.97);
-        }
-
-        .expiry {
-            margin-top: 10px;
-            font-size: 14px;
-            color: #d62828;
-            font-weight: 600;
-        }
-
-        .timer {
-            margin-top: 5px;
-            font-size: 15px;
-            color: #0077b6;
-            font-weight: 600;
+            background: #023e8a;
         }
 
         .message {
@@ -127,15 +102,33 @@
             font-weight: 600;
             color: green;
             display: none;
-            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        .expiry {
+            margin-top: 5px;
+            font-size: 13px;
+            color: #e63946;
+            font-weight: 600;
+        }
+
+        .timer {
+            margin-top: 5px;
+            font-size: 14px;
+            color: #0077b6;
+            font-weight: 600;
         }
     </style>
 </head>
 
 <body>
-
     <div class="container">
+        <span class="close-btn" id="closeBtn">&times;</span>
         <h2>Make Payment</h2>
+
+        <div class="form-group">
+            <label for="price">Amount to Pay</label>
+            <input type="text" id="price" value="₦3,500" readonly />
+        </div>
 
         <div class="form-group">
             <label for="bankName">Bank Name</label>
@@ -156,10 +149,15 @@
         <div class="timer" id="countdown">Time remaining: 20:00</div>
 
         <button id="confirmBtn">I've Made Payment</button>
-        <div class="message" id="message">✅ Payment confirmed! Opening email...</div>
+        <div class="message" id="message">✅ Payment confirmed! Opening email client...</div>
     </div>
 
     <script>
+        // Redirect to book.html outside the folder
+        document.getElementById('closeBtn').addEventListener('click', function() {
+            window.location.href = "access.html";
+        });
+
         const accounts = [
             { bank: "GoMoney", name: "Vincent Nwankwo", number: "8500809270" },
             { bank: "Opay", name: "Vincent Juom Nwankwo", number: "8037541810" },
@@ -174,7 +172,7 @@
         const countdownEl = document.getElementById("countdown");
 
         let index = 0;
-        let timeLeft = 20 * 60; // 20 minutes
+        let timeLeft = 20 * 60;
 
         function showAccount(i) {
             bankName.value = accounts[i].bank;
@@ -186,7 +184,7 @@
             const minutes = Math.floor(timeLeft / 60);
             const seconds = timeLeft % 60;
             countdownEl.textContent =
-                `Time remaining: ${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+                `Time remaining: ${minutes.toString().padStart(2,'0')}:${seconds.toString().padStart(2,'0')}`;
         }
 
         showAccount(index);
@@ -209,14 +207,13 @@
             const adminEmail = "hart4sure@gmail.com";
             const subject = encodeURIComponent("Payment Confirmation Request");
             const body = encodeURIComponent(
-                `Hello Admin,\n\nI have made payment to the following account:\n\nBank: ${bankName.value}\nAccount Number: ${accountNumber.value}\nAccount Name: ${accountName.value}\n\nPlease approve my request and send the password.\n\nThank you.`
+                `Hello Admin,\n\nI have made a payment of ₦3,500 to the following account:\nBank: ${bankName.value}\nAccount Number: ${accountNumber.value}\nAccount Name: ${accountName.value}\n\nPlease approve my request and send me the password to access the book.\n\nThank you.`
             );
 
             setTimeout(() => {
                 window.location.href = `mailto:${adminEmail}?subject=${subject}&body=${body}`;
-            }, 800);
+            }, 1000);
         });
     </script>
-
 </body>
 </html>
