--- a/payment Factory/payment.html
+++ b/payment Factory/payment.html
@@ -207,7 +207,7 @@
             const adminEmail = "hart4sure@gmail.com";
             const subject = encodeURIComponent("Payment Confirmation Request");
             const body = encodeURIComponent(
-                `Hello Admin,\n\nI have made a payment of ₦3,500 to the following account:\nBank: ${bankName.value}\nAccount Number: ${accountNumber.value}\nAccount Name: ${accountName.value}\n\nPlease approve my request and send me the password to access the book.\n\nThank you.`
+                `Hello Admin,\n\nI have made a payment of ₦3,500 to the following account:\n\nBank: ${bankName.value}\nAccount Number: ${accountNumber.value}\nAccount Name: ${accountName.value}\n\nPlease approve my request and send me the password to access the book.\n\nThank you.`
             );
 
             setTimeout(() => {
